--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">
-        <activity android:name=".AppointmentConfirmed"
-            android:parentActivityName=".DeedRegistration"/>
+        <activity android:name=".StateProgressBar"></activity>
+        <activity
+            android:name=".AppointmentConfirmed"
+            android:parentActivityName=".DeedRegistration" />
         <activity
             android:name=".ViewStatus"
             android:parentActivityName=".MainActivity" />
