--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -31,4 +32,13 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
 
     implementation 'com.basgeekball:awesome-validation:1.3'
+
+    // firebase
+    implementation 'com.google.firebase:firebase-core:16.0.8'
+    implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
+
+    // state progress bar
+    implementation 'com.kofigyan.stateprogressbar:stateprogressbar:1.0.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
