--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
 
+    //volley networking library
     implementation 'com.android.volley:volley:1.1.1'
 
     implementation 'com.basgeekball:awesome-validation:1.3'
