--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     //volley networking library
     implementation 'com.android.volley:volley:1.1.1'
 
+    //validation
     implementation 'com.basgeekball:awesome-validation:1.3'
 
     // firebase
@@ -40,6 +41,9 @@ dependencies {
 
     // state progress bar
     implementation 'com.kofigyan.stateprogressbar:stateprogressbar:1.0.0'
+
+    // image compression
+    implementation 'id.zelory:compressor:2.1.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
