Commit till sub deed category

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,19 +11,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">
-
+        <activity android:name=".myProfile"></activity>
+        <activity
+            android:name=".MakeAssessmentFee"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".SplashActivity"
             android:theme="@style/SplashTheme">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
         <activity
             android:name=".AppointmentConfirmed"
             android:parentActivityName=".DeedRegistration" />
@@ -42,7 +42,6 @@
         <activity
             android:name=".DeedRegistration"
             android:parentActivityName=".MainActivity" />
-
         <activity android:name=".MainActivity" />
     </application>
 
