--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,8 +42,20 @@ dependencies {
     // state progress bar
     implementation 'com.kofigyan.stateprogressbar:stateprogressbar:1.0.0'
 
+    // For image processing
+
+    // apache commons io util
+    implementation 'org.apache.commons:commons-io:1.3.2'
+
+    // glide
+    implementation 'com.github.bumptech.glide:glide:4.9.0';
+    implementation 'jp.wasabeef:glide-transformations:4.0.1'
+    implementation 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
+
     // image compression
     implementation 'id.zelory:compressor:2.1.0'
+
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
 
 apply plugin: 'com.google.gms.google-services'
