--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">
-        <activity android:name=".myProfile"></activity>
+        android:theme="@style/AppTheme">
+
+        <activity
+            android:name=".PaymentGateway"
+            android:parentActivityName=".MainActivity" />
+
+        <activity
+            android:name=".PaymentActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".myProfile"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".MakeAssessmentFee"
             android:parentActivityName=".MainActivity" />
