--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".AboutActivity"></activity>
         <activity
             android:name=".PaymentGateway"
             android:parentActivityName=".MainActivity" />
-
         <activity
             android:name=".PaymentActivity"
             android:parentActivityName=".MainActivity" />
