--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,28 +10,36 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".HelpActivity"
+            android:screenOrientation="portrait"
             android:parentActivityName=".MainActivity" />
-        <activity android:name=".OnBoardingActivity" />
+        <activity
+            android:name=".OnBoardingActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".AboutActivity"
+            android:screenOrientation="portrait"
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".PaymentGateway"
-            android:parentActivityName=".MainActivity" />
-        <activity
-            android:name=".PaymentActivity"
+            android:screenOrientation="portrait"
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".myProfile"
+            android:screenOrientation="portrait"
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".MakeAssessmentFee"
+            android:screenOrientation="portrait"
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".SplashActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -41,24 +49,31 @@
         </activity>
         <activity
             android:name=".AppointmentConfirmed"
+            android:screenOrientation="portrait"
             android:parentActivityName=".DeedRegistration" />
         <activity
             android:name=".ViewStatus"
+            android:screenOrientation="portrait"
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".Groomdetails"
+            android:screenOrientation="portrait"
             android:parentActivityName=".Bridedetails" />
         <activity
             android:name=".Bridedetails"
+            android:screenOrientation="portrait"
             android:parentActivityName=".MarriageRegistration" />
         <activity
             android:name=".MarriageRegistration"
+            android:screenOrientation="portrait"
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".DeedRegistration"
+            android:screenOrientation="portrait"
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="portrait"
             android:launchMode="singleTop"
             android:theme="@style/AppTheme.NoActionBar" />
     </application>
