--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,17 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+        // with proguard
         release {
+            minifyEnabled true
+            shrinkResources true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+
+        //without proguard
+        debug {
             minifyEnabled false
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -32,8 +41,6 @@ dependencies {
     //volley networking library
     implementation 'com.android.volley:volley:1.1.1'
 
-    //validation
-    implementation 'com.basgeekball:awesome-validation:1.3'
 
     // firebase
     implementation 'com.google.firebase:firebase-core:16.0.9'
